# bedrock-rag-watchdog

./: README.md  pyproject.toml
src/bedrock_rag_watchdog/: __init__.py  agent.py  cli.py  datadog_push.py  drift.py  sagemaker.py
src/bedrock_rag_watchdog/tests/: test_drift.py  test_sagemaker.py
